tests/negative/comptime_div_floor_by_zero.ora
contract ComptimeDivFloorByZero {
    pub fn run() -> i256 {
        return comptime {
            @divFloor(4, 0);
        };
    }
}
